2008-08-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #546933

	* calendar/e-cal-backend-exchange.c: (internal_get_timezone):
	Do not lookup for NULL.

2008-08-06  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #545877

	* configure.in:
	Bump eds_minimum_version to 2.23.90 for CamelDList.

	* camel/camel-exchange-journal.c:
	* camel/camel-exchange-journal.h:
	Use CamelDList instead of EDList.

2008-08-06  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #546397

	* camel/camel-exchange-folder.c: (class_init), (search_free):
	Remove 'search_free' and use the default function for this, to not
	free memory held by camel_pstring_....

2008-08-06  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #546257

	* addressbook/e-book-backend-exchange.c: (subscription_notify):
	Use proper ref/unref functions on EBookBackendExchange object.

2008-08-06  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #329505

	* addressbook/e-book-backend-exchange.c: (get_contact_list_members),
	(free_contact_list_member), (free_members_list),
	(e_contact_from_props), (e_book_backend_exchange_connect),
	(props_from_contact), (cl_post_command), (remove_member),
	(merge_contact_lists), (e_book_backend_exchange_create_contact),
	(e_book_backend_exchange_modify_contact),
	(e_book_backend_exchange_get_static_capabilites),
	(e_book_backend_exchange_class_init): Recognize Distribution lists
	stored on the server and work with them as with Contact lists.

2008-08-04  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.23.6 release and version bump.

2008-08-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #546385

	* camel/camel-exchange-folder.c: (search_by_expression):
	Return initialized pointer instead of some uninitialized variable.

2008-08-05  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-folder.c (search_by_expression): Don't mimic.
	Give the same results from search.

2008-08-04  Bharath Acharya  <abharath@novell.com>
