@@ -1,3 +1,12 @@
+2008-08-12  Milan Crha  <mcrha@redhat.com>
+
+	** Part of fix for bug #547308
+
+	* addressbook/e-book-backend-gal.c: (gal_connect): Distinguish
+	between GAL offline and unsupported authentication method used.
+	* addressbook/e-book-backend-gal.c: (ldap_reconnect), (gal_reconnect),
+	(build_contact_from_entry): Adapt to new function prototype from EDS.
+
 2008-08-11  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #546933
